SSM，swagger，统一异常处理，分页

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8500
-spring.application.name=payment-platform
+server.port=8800
+spring.application.name=notes
 #datasource
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -27,14 +27,3 @@ mybatis.mapperLocations=classpath:mapper/*.xml
 logging.file=./log/${spring.application.name}.log
 logging.level.root=info
 spring.mvc.favicon.enabled=false
-#freemarker
-spring.freemarker.cache=false
-spring.freemarker.charset=UTF-8
-spring.freemarker.check-template-location=true
-spring.freemarker.content-type=text/html
-spring.freemarker.expose-request-attributes=true
-spring.freemarker.expose-session-attributes=true
-spring.freemarker.request-context-attribute=request
-spring.freemarker.suffix=.ftl
-spring.freemarker.templateEncoding=UTF-8
-spring.freemarker.templateLoaderPath=classpath:/templates/
