--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,14 +30,11 @@ spring.mvc.favicon.enabled=false
 # redis
 spring.redis.database=0
 spring.redis.host=127.0.0.1
-spring.redis.jedis.pool.max-active=8
-spring.redis.jedis.pool.max-idle=8
-spring.redis.jedis.pool.max-wait=-1ms
-spring.redis.jedis.pool.min-idle=0
-spring.redis.lettuce.pool.max-active=8
-spring.redis.lettuce.pool.max-idle=8
-spring.redis.lettuce.pool.max-wait=-1ms
-spring.redis.lettuce.pool.min-idle=0
-spring.redis.lettuce.shutdown-timeout=100ms
 spring.redis.password=
 spring.redis.port=6379
+spring.redis.timeout=0ms
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-wait=-1ms
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.min-idle=0
+
