--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,9 +32,9 @@ spring.redis.database=0
 spring.redis.host=127.0.0.1
 spring.redis.password=
 spring.redis.port=6379
-spring.redis.timeout=0ms
+spring.redis.timeout=0
 spring.redis.jedis.pool.max-active=8
-spring.redis.jedis.pool.max-wait=-1ms
+spring.redis.jedis.pool.max-wait=-1
 spring.redis.jedis.pool.max-idle=8
 spring.redis.jedis.pool.min-idle=0
 
